--- a/index.html
+++ b/index.html
@@ -14,27 +14,59 @@
 </script>
 
 <header>
-    <h1>🍔 BURGERSHOT</h1>
-    <button onclick="logout()">Logout</button>
+    <h1>🍔 BURGERSHOT INTERN</h1>
+    <div>
+        <span id="welcomeUser"></span>
+        <button onclick="logout()">Logout</button>
+    </div>
 </header>
 
-<section class="content">
-    <h2>Willkommen im Mitarbeiterbereich</h2>
-    <p id="welcomeText"></p>
+<section class="dashboard">
+    <h2>Interne Bereiche</h2>
 
-    <h3>Interne Bereiche</h3>
-    <ul>
-        <li>Kleiderordnung</li>
-        <li>Sanktionen</li>
-        <li>Business Announce</li>
-        <li>Abmeldungen</li>
-        <li>Einkäufe</li>
-    </ul>
+    <div class="panel-grid">
+
+        <a href="kleiderordnung.html" class="panel">
+            <h3>👕 Kleiderordnung</h3>
+            <p>Uniformregeln & Auftreten im Dienst.</p>
+        </a>
+
+        <a href="sanktionen.html" class="panel">
+            <h3>⚖ Sanktionen</h3>
+            <p>Verwarnungen & Disziplinarmaßnahmen.</p>
+        </a>
+
+        <a href="businessannounce.html" class="panel">
+            <h3>📢 Business Announce</h3>
+            <p>Öffentliche Bekanntmachungen.</p>
+        </a>
+
+        <a href="abmeldungen.html" class="panel">
+            <h3>📅 Abmeldungen</h3>
+            <p>Urlaub & Dienstabwesenheit.</p>
+        </a>
+
+        <a href="einkaeufe.html" class="panel">
+            <h3>📦 Einkäufe</h3>
+            <p>Lager & Bestellungen verwalten.</p>
+        </a>
+
+        <a href="bewerber.html" class="panel">
+            <h3>📝 Bewerbungen</h3>
+            <p>Neue Mitarbeiter & Bewerber prüfen.</p>
+        </a>
+
+        <a href="management.html" class="panel manager-panel">
+            <h3>👑 Management</h3>
+            <p>Nur für Führungsebene.</p>
+        </a>
+
+    </div>
 </section>
 
 <script>
     let user = localStorage.getItem("loggedInUser");
-    document.getElementById("welcomeText").innerText = "Eingeloggt als: " + user;
+    document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
 
     function logout() {
         localStorage.removeItem("loggedInUser");
