--- a/index.html
+++ b/index.html
@@ -42,39 +42,53 @@
 </section>
 
 <section class="dashboard">
+
     <h2>Interne Bereiche</h2>
 
-    <div class="panel-grid">
-        <a href="#" class="panel">
-            <h3>👕 Kleiderordnung</h3>
-            <p>Uniformregeln & professionelles Auftreten.</p>
+    <!-- GROSSE PANELS -->
+    <div class="main-panels">
+
+        <a href="#" class="big-panel">
+            <div class="big-content">
+                <h3>📢 Business Management</h3>
+                <p>Verwalte Ankündigungen, Events und Unternehmenskommunikation.</p>
+            </div>
         </a>
 
-        <a href="#" class="panel">
-            <h3>⚖ Sanktionen</h3>
-            <p>Verwarnungen & Disziplinarsystem.</p>
+        <a href="#" class="big-panel gold">
+            <div class="big-content">
+                <h3>👑 Management Center</h3>
+                <p>Führungsebene, Mitarbeiterverwaltung & Entscheidungen.</p>
+            </div>
         </a>
 
-        <a href="#" class="panel">
-            <h3>📢 Business Announce</h3>
-            <p>Offizielle Bekanntmachungen.</p>
-        </a>
-
-        <a href="#" class="panel">
-            <h3>📅 Abmeldungen</h3>
-            <p>Urlaub & Dienstabwesenheiten.</p>
-        </a>
-
-        <a href="#" class="panel">
-            <h3>📦 Einkäufe</h3>
-            <p>Lagerverwaltung & Bestellungen.</p>
-        </a>
-
-        <a href="#" class="panel manager-panel">
-            <h3>👑 Management</h3>
-            <p>Exklusiver Bereich für Führungsebene.</p>
-        </a>
     </div>
+
+    <!-- KLEINE PANELS -->
+    <div class="small-panels">
+
+        <a href="#" class="small-panel">
+            <h4>👕 Kleiderordnung</h4>
+        </a>
+
+        <a href="#" class="small-panel">
+            <h4>⚖ Sanktionen</h4>
+        </a>
+
+        <a href="#" class="small-panel">
+            <h4>📅 Abmeldungen</h4>
+        </a>
+
+        <a href="#" class="small-panel">
+            <h4>📦 Einkäufe</h4>
+        </a>
+
+        <a href="#" class="small-panel">
+            <h4>📝 Bewerbungen</h4>
+        </a>
+
+    </div>
+
 </section>
 
 <footer>
