--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
 <header>
     <div class="header-left">
-        <span class="title">🍔 Burgershot Intern</span>
+        🍔 Burgershot Intern
     </div>
 
     <div class="header-right">
-        <span id="welcomeUser"></span>
-        <button onclick="logout()">Logout</button>
+        <span class="user-info">
+            Eingeloggt als: <strong id="welcomeUser"></strong>
+        </span>
+        <button class="logout-btn" onclick="logout()">Logout</button>
     </div>
 </header>
 
