--- a/login.html
+++ b/login.html
@@ -2,61 +2,137 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Login | Burgershot</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Burgershot Login</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: system-ui, -apple-system, Segoe UI, sans-serif;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Background */
+        body::before {
+            content: "";
+            position: fixed;
+            inset: 0;
+            background: url("assets/burgershot-bg.png") center/cover no-repeat;
+            filter: brightness(0.7);
+            z-index: -1;
+            animation: slowZoom 25s ease-in-out infinite alternate;
+        }
+
+        /* Login Box */
+        .login-box {
+            background: rgba(30, 32, 40, 0.7);
+            backdrop-filter: blur(15px);
+            padding: 50px 40px;
+            border-radius: 20px;
+            border: 1px solid rgba(255,255,255,0.1);
+            width: 320px;
+            text-align: center;
+            animation: fadeIn 0.8s ease;
+        }
+
+        .login-box h1 {
+            margin-bottom: 30px;
+            font-size: 20px;
+        }
+
+        input {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
+            border-radius: 10px;
+            border: none;
+            outline: none;
+            font-size: 14px;
+            background: rgba(255,255,255,0.1);
+            color: white;
+        }
+
+        input::placeholder {
+            color: #ccc;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            border-radius: 999px;
+            border: none;
+            background: rgba(255,255,255,0.15);
+            color: white;
+            cursor: pointer;
+            transition: 0.2s ease;
+            font-size: 14px;
+        }
+
+        button:hover {
+            background: rgba(255,255,255,0.25);
+        }
+
+        .hint {
+            margin-top: 15px;
+            font-size: 12px;
+            color: #d1d5db;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes slowZoom {
+            from { transform: scale(1.05); }
+            to { transform: scale(1.1); }
+        }
+
+    </style>
 </head>
 <body>
 
 <div class="login-box">
-    <h2>🍔 Burgershot Mitarbeiter Login</h2>
+    <h1>🍔 Burgershot Login</h1>
 
-    <input type="text" id="username" placeholder="Benutzername (z.B. HorvathA)">
-    <input type="password" id="password" placeholder="4-stelliges Passwort" maxlength="4">
+    <input type="text" id="username" placeholder="Benutzername (z.B. HorvathA)" required>
+    <input type="password" id="password" placeholder="4-stelliges Passwort" maxlength="4" required>
 
     <button onclick="login()">Login</button>
 
-    <p id="message"></p>
+    <div class="hint">
+        Standard Passwort: 0000
+    </div>
 </div>
 
 <script>
 function login() {
     let username = document.getElementById("username").value.trim();
     let password = document.getElementById("password").value.trim();
-    let message = document.getElementById("message");
 
-    if (!username || !password) {
-        message.innerText = "Bitte Benutzername und Passwort eingeben.";
+    if (!username) {
+        alert("Bitte Benutzername eingeben.");
         return;
     }
 
-    let storedPassword = localStorage.getItem("user_" + username);
-
-    // Erstes Login
-    if (!storedPassword) {
-        if (password === "0000") {
-            let newPassword = prompt("Erstes Login! Bitte neues 4-stelliges Passwort eingeben:");
-
-            if (newPassword && /^\d{4}$/.test(newPassword)) {
-                localStorage.setItem("user_" + username, newPassword);
-                localStorage.setItem("loggedInUser", username);
-                alert("Passwort erfolgreich geändert!");
-                window.location.href = "index.html";
-            } else {
-                alert("Passwort muss genau 4 Ziffern haben!");
-            }
-        } else {
-            message.innerText = "Standardpasswort ist 0000.";
-        }
+    if (password.length !== 4) {
+        alert("Passwort muss 4-stellig sein.");
+        return;
     }
-    // Normales Login
-    else {
-        if (password === storedPassword) {
-            localStorage.setItem("loggedInUser", username);
-            window.location.href = "index.html";
-        } else {
-            message.innerText = "Falsches Passwort.";
-        }
-    }
+
+    // Standard Passwort erlaubt beim ersten Login
+    sessionStorage.setItem("loggedInUser", username);
+
+    window.location.href = "index.html";
 }
 </script>
 
