--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <p>Ankündigungen, Events & Unternehmenskommunikation verwalten.</p>
         </div>
 
-        <div class="big-panel gold">
+        <a href="management.html" class="big-panel gold">
             <h3>👑 Management Center</h3>
             <p>Mitarbeiterverwaltung & Führungsentscheidungen.</p>
-        </div>
+        </a>
 
     </div>
 
