--- a/login.html
+++ b/login.html
@@ -119,19 +119,19 @@ function login() {
     let username = document.getElementById("username").value.trim();
     let password = document.getElementById("password").value.trim();
 
-    if (!username) {
-        alert("Bitte Benutzername eingeben.");
+    let accounts = JSON.parse(localStorage.getItem("accounts")) || {};
+
+    if (!accounts[username]) {
+        alert("Account existiert nicht.");
         return;
     }
 
-    if (password.length !== 4) {
-        alert("Passwort muss 4-stellig sein.");
+    if (accounts[username] !== password) {
+        alert("Falsches Passwort.");
         return;
     }
 
-    // Standard Passwort erlaubt beim ersten Login
     sessionStorage.setItem("loggedInUser", username);
-
     window.location.href = "index.html";
 }
 </script>
