--- a/management.html
+++ b/management.html
@@ -8,7 +8,12 @@
 <body>
 
 <script>
-if (!sessionStorage.getItem("loggedInUser")) {
+let user = sessionStorage.getItem("loggedInUser");
+
+document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
+
+function logout() {
+    sessionStorage.removeItem("loggedInUser");
     window.location.href = "login.html";
 }
 </script>
