--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <title>Burgershot Intern</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<header>
+    <div class="header-left">
+        <a href="index.html" class="back-btn">← Zurück</a>
+    </div>
+
+    <div class="header-right">
+        <span id="welcomeUser"></span>
+        <button class="logout-btn" onclick="logout()">Logout</button>
+    </div>
+</header>
 <body>
 
 <script>
