--- a/dashboard.html
+++ b/dashboard.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
-<header>
-    <div class="header-left">
-        <a href="index.html" class="back-btn">← Zurück</a>
-    </div>
-
-    <div class="header-right">
-        <span id="welcomeUser"></span>
-        <button class="logout-btn" onclick="logout()">Logout</button>
-    </div>
-</header>
+<head>
+<meta charset="UTF-8">
+<title>Dashboard</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
 
 <h1>Willkommen im Mitarbeiterbereich</h1>
