--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@ function logout() {
 
 <header>
     <div class="header-left">
-        🍔 Burgershot Intern
+        <a href="index.html" class="brand-link">🍔 Burgershot Intern</a>
     </div>
 
     <div class="header-right">
-        <span class="user-info">
-            Eingeloggt als: <strong id="welcomeUser"></strong>
-        </span>
+        <span id="welcomeUser"></span>
         <button class="logout-btn" onclick="logout()">Logout</button>
     </div>
 </header>
