--- a/kleiderordnung.html
+++ b/kleiderordnung.html
@@ -8,10 +8,14 @@
 <body>
 
 <header>
-    <h1>🍔 BURGERSHOT</h1>
-    <nav>
-        <a href="index.html">Start</a>
-    </nav>
+    <div class="header-left">
+        <a href="index.html" class="brand-link">🍔 Burgershot Kleiderordnung</a>
+    </div>
+
+    <div class="header-right">
+        <span id="welcomeUser"></span>
+        <button class="logout-btn" onclick="logout()">Logout</button>
+    </div>
 </header>
 
 <section class="content">
