--- a/management.html
+++ b/management.html
@@ -15,8 +15,9 @@ if (!sessionStorage.getItem("loggedInUser")) {
 
 <header>
     <div class="header-left">
-        👑 Management
+        <a href="index.html" class="brand-link">👑 Management</a>
     </div>
+
     <div class="header-right">
         <span id="welcomeUser"></span>
         <button class="logout-btn" onclick="logout()">Logout</button>
