--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Startseite</title>
+<title>Burgershot Intern</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <script>
-let user = sessionStorage.getItem("loggedInUser");
-
-document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
-
-function logout() {
-    sessionStorage.removeItem("loggedInUser");
+if (!sessionStorage.getItem("loggedInUser")) {
     window.location.href = "login.html";
 }
 </script>
@@ -31,28 +26,16 @@ function logout() {
 
 <section class="dashboard">
 
-    <div class="main-panels">
-
-        <div class="big-panel">
-            <h3>📢 Business Management</h3>
-            <p>Ankündigungen, Events & Unternehmenskommunikation verwalten.</p>
-        </div>
-
-        <a href="management.html" class="big-panel gold">
-            <h3>👑 Management Center</h3>
-            <p>Mitarbeiterverwaltung & Führungsentscheidungen.</p>
-        </a>
-
+    <div class="big-panel">
+        <h3>📢 Business Management</h3>
+        <p>Ankündigungen, Events & Unternehmenskommunikation verwalten.</p>
     </div>
 
-    <div class="small-panels">
-
-        <div class="small-panel">👕 Kleiderordnung</div>
-        <div class="small-panel">⚖ Sanktionen</div>
-        <div class="small-panel">📅 Abmeldungen</div>
-        <div class="small-panel">📦 Einkäufe</div>
-        <div class="small-panel">📝 Bewerbungen</div>
-
+    <div class="big-panel gold">
+        <h3>👑 Management Center</h3>
+        <p><a href="management.html" style="color:white; text-decoration:none;">
+        Mitarbeiterverwaltung & Führungsentscheidungen.
+        </a></p>
     </div>
 
 </section>
@@ -62,13 +45,13 @@ function logout() {
 </footer>
 
 <script>
-    let user = sessionStorage.getItem("loggedInUser");
-    document.getElementById("welcomeUser").innerText = user;
+const user = sessionStorage.getItem("loggedInUser");
+document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
 
-    function logout() {
-        sessionStorage.removeItem("loggedInUser");
-        window.location.href = "login.html";
-    }
+function logout() {
+    sessionStorage.removeItem("loggedInUser");
+    window.location.href = "login.html";
+}
 </script>
 
 </body>
